--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="TedX|IIT-Bhubaneshwar|2023"
-      content="TedX|IIT-Bhubaneshwar|2023"
+      name="TEDx|IIT-Bhubaneshwar|2023"
+      content="TEDx|IIT-Bhubaneshwar|2023"
     />
-    <title>TedX | IIT-Bhubaneshwar | 2023</title>
+    <title>TEDx | IIT-Bhubaneshwar | 2023</title>
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
