Corrected 'Bhubaneshwar' -> 'Bhubaneswar'

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TEDx | IIT-Bhubaneshwar | 2023</title>
+    <title>TEDx | IIT-Bhubaneswar | 2023</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
